--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body{
 }
 a{
 /*	color:#411700;*/
-	color:#6c6c6c;
+	color:#8b7d75;
 	text-decoration:none;
 }
 /*For fixing floating children in a parent element: */
