--- a/css/main.css
+++ b/css/main.css
@@ -254,6 +254,10 @@ div.menu_body > a:nth-of-type(3n) div.grid_thumb{
 	height:55px;
 	font-size:1.2em;
 }
+#gridview{
+	height: 693px; 
+	overflow: scroll;
+}
 #gridview h1{
 	float:left;
 	font-weight:400;
