--- a/css/main.css
+++ b/css/main.css
@@ -305,6 +305,7 @@ div.menu_body > a:nth-of-type(3n) div.grid_thumb{
 }
 .list_item .glare{
 	opacity:0.55;
+	right:0;
 }
 .easyzoom--overlay  div.easyzoom-flyout{
 	top:-110px !important;
