--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,7 @@ div.menu_body > a:nth-of-type(3n) div.grid_thumb{
 .list_item .glare{
 	opacity:0.55;
 	right:0;
+	z-index:999;
 }
 .easyzoom--overlay  div.easyzoom-flyout{
 	top:-110px !important;
