--- a/css/main.css
+++ b/css/main.css
@@ -390,6 +390,7 @@ sup{
 	font-size: 1.6em;
 	line-height:1.1em;
 	font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	text-transform:capitalize;
 }
 .list_item img{
 /*	position:absolute;*/
